[package]
name = "doppl-rs"
version = "0.1.0"
edition = "2021"

[features]
webdev = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.webdev]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.13.0" }
